[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "websockify_LibvirtDomain"
version = "1.0"
authors = [
  { name="Stijn Rombouts", email="stijnrombouts@outlook.com" },
]
description = "Websockify token plugin for Libvirt domains"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/macOS-KVM/websockify-LibvirtDomain"
"Bug Tracker" = "https://github.com/macOS-KVM/websockify-LibvirtDomain/issues"