[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "server99-websockify-token-plugin"
version = "2.0"
authors = [
  { name="Stijn Rombouts", email="stijnrombouts@outlook.com" },
]
description = "Websockify token plugin for Server99"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/99-industries/server99-websockify-token-plugin"
"Bug Tracker" = "https://github.com/99-industries/server99-websockify-token-plugin/issues"